WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119377
Reloading this video test shows garbage briefly
https://bugs.webkit.org/show_bug.cgi?id=119377
Summary
Reloading this video test shows garbage briefly
Simon Fraser (smfr)
Reported
2013-07-31 23:08:46 PDT
Reloading
http://trac.webkit.org/export/153570/trunk/LayoutTests/compositing/overflow/overflow-compositing-descendant.html
on mountain lion shows a flash of garbage pixels where the video should be.
Attachments
Patch
(1.71 KB, patch)
2013-08-21 17:59 PDT
,
Simon Fraser (smfr)
andersca
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2
(528.76 KB, application/zip)
2013-08-22 03:54 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-08-21 17:42:31 PDT
RenderVideo::foregroundIsKnownToBeOpaqueInRect() lies. It needs to ask the media player if it's actually going to show anything.
Simon Fraser (smfr)
Comment 2
2013-08-21 17:59:28 PDT
Created
attachment 209318
[details]
Patch
Build Bot
Comment 3
2013-08-22 03:54:16 PDT
Comment on
attachment 209318
[details]
Patch
Attachment 209318
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/1393100
New failing tests: fast/workers/termination-with-port-messages.html
Build Bot
Comment 4
2013-08-22 03:54:18 PDT
Created
attachment 209341
[details]
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
Anders Carlsson
Comment 5
2013-08-22 07:51:59 PDT
Comment on
attachment 209318
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=209318&action=review
> Source/WebCore/rendering/RenderVideo.cpp:350 > + MediaPlayer* player = mediaElement()->player(); > + if (player)
I'd put these on the same line.
Simon Fraser (smfr)
Comment 6
2013-08-22 11:47:44 PDT
https://trac.webkit.org/r154455
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug