Reloading this video test shows garbage briefly https://bugs.webkit.org/show_bug.cgi?id=119377

Reviewed by Anders Carlson.

RenderVideo should not claim that it's foreground is opaque
unless it has a video frame to display.

* rendering/RenderVideo.cpp:
(WebCore::RenderVideo::foregroundIsKnownToBeOpaqueInRect):

Canonical link: https://commits.webkit.org/138116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154455 268f45cc-cd09-0410-ab3c-d52691b4dbfc